Add files via upload
Updated analysis docs for ofbiz repo